[workspace]
resolver = "3"
members = [
    "src/play_launch",
    "src/play_launch_parser/src/play_launch_parser",
    "src/play_launch_wasm_common",
    "src/play_launch_wasm_codegen",
    "src/play_launch_wasm_runtime",
]
exclude = [
    "tests",
    "src/vendor/rcl_interception_sys",
]

[patch.crates-io]
rclrs = { path = "src/vendor/ros2_rust/rclrs" }
rosidl_runtime_rs = { path = "src/vendor/rosidl_runtime_rs/rosidl_runtime_rs" }
