[package]
name = "play-launch-tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Integration test binaries
[[test]]
name = "simple_workspace"
path = "tests/simple_workspace.rs"

[[test]]
name = "autoware"
path = "tests/autoware.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
which = "6"
