[package]
name = "play-launch-tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Integration test binaries
[[test]]
name = "simple_workspace"
path = "tests/simple_workspace.rs"

[[test]]
name = "autoware"
path = "tests/autoware.rs"

[[test]]
name = "sequential_loading"
path = "tests/sequential_loading.rs"

[[test]]
name = "concurrent_loading"
path = "tests/concurrent_loading.rs"

[[test]]
name = "mixed_loading"
path = "tests/mixed_loading.rs"

[[test]]
name = "io_stress"
path = "tests/io_stress.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
which = "6"
