[package]
name = "play_launch"
version = "0.8.2"
edition = "2024"
authors = ["Lin, Hsiang-Jui <jerry73204@gmail.com>"]
description = "ROS launch record player"
homepage = "https://github.com/NEWSLabNTU/play_launch"
repository = "https://github.com/NEWSLabNTU/play_launch.git"
readme = "../../README.md"
license = "BSD-3-Clause"

# Main binary
[[bin]]
name = "play_launch"
path = "src/main.rs"

# Helper daemon binary (requires CAP_SYS_PTRACE capability)
[[bin]]
name = "play_launch_io_helper"
path = "src/bin/play_launch_io_helper/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.16", features = ["derive"] }
composition_interfaces = "*"
csv = "1.3"
dashmap = "6.1"
diagnostic_msgs = "*"
eyre = "0.6.12"
play_launch_msgs = "*"
play_launch_parser = { path = "../play_launch_parser/crates/play_launch_parser" }
ros-launch-manifest-types = { path = "../ros-launch-manifest/types" }
ros-launch-manifest-check = { path = "../ros-launch-manifest/check" }
spsc_shm = { path = "../spsc_shm" }
futures = "0.3.30"
glob = "0.3"
humantime-serde = "1.1"
itertools = "0.13.0"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
num_cpus = "1.16"
nvml-wrapper = "0.11"
rcl_interfaces = "*"
thiserror = "1.0"
rclrs = "0.7"
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0.127"
serde_yaml_ng = "0.10"
shell-quote = "0.7.1"
sysinfo = { version = "0.32", default-features = false, features = ["system", "network"] }
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1.40"

# Web UI dependencies
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
rust-embed = "8"
mime_guess = "2"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
async-stream = "0.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
which = "6.0"
pyo3 = { version = "0.24", features = ["auto-initialize", "py-clone"] }
yaml-rust2 = "0.11.0"

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3.8"
ts-rs = "12"

# Release profile optimization for smaller binary size
[profile.release]
strip = true        # Strip debug symbols (reduces binary size by ~50-60%)
lto = "thin"        # Thin link-time optimization (balance between speed and size)
