<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>play_launch</name>
  <version>0.8.1</version>
  <description>ROS 2 launch execution replayer - Replays recorded launch from dump_launch</description>
  <maintainer email="jerry73204@gmail.com">Jerry Lin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <!-- Rust runtime dependencies (linked .so) -->
  <depend>rcl_interfaces</depend>
  <depend>composition_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>play_launch_msgs</depend>

  <!-- Build-only: vendored rclrs #[link] attributes require these at link time,
       but the linker's as-needed flag strips them from the final binary. -->
  <build_depend>test_msgs</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>unique_identifier_msgs</build_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
