<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>play_launch_container</name>
  <version>0.1.0</version>
  <description>Observable component container with event publishing for play_launch</description>
  <maintainer email="play_launch@todo.todo">play_launch developers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>composition_interfaces</depend>
  <depend>play_launch_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
